--- a/style.css
+++ b/style.css
@@ -11,13 +11,11 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow-y: hidden;
   overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
   font-size: 24px;
   color: #273E47;
   background-color: #FFFCF2;
-
 }
 
 h1 {
@@ -77,7 +75,6 @@ h2 {
   grid-template-rows: 1fr;
   text-align: left;
   align-items: center;
-  width: 60%;
   margin: 0 auto;
 }
 
@@ -93,7 +90,7 @@ h2 {
 
 .settingsDiv, #clock-interface {
   max-width: 600px;
-  width: 60%;
+  width: 100vw;
 }
 
 #clockDisplay {
@@ -224,10 +221,11 @@ h2 {
 @media (max-width: 1000px) {
   h1 {font-size: 4rem;}
 
-  #clockDisplay {font-size: 10rem;}
+  #clockDisplay {font-size: 13rem;}
 
   #clock-interface {
     grid-template-rows: 1fr 0.5fr 1fr;
+    max-width: 900px;
   }
 
   .roundIndicator {
@@ -235,7 +233,21 @@ h2 {
     height: 40px;
   }
 
+  .roundIndicator:not(:first-child) {margin-left: 50px;}
+
+  #settingsButtonContainer {margin-right: 50px;}
+
   #settingsButton {font-size: 2.5rem;}
+
+  .settingsDiv {
+    max-width: 800px;
+    grid-row-gap: 50px;
+  }
+
+  #breakTimeSelector, #sessionTimeSelector {
+    margin: 0 20px;
+    width: 6vw;
+  }
 
   .interfaceButton {
     font-size: 6rem;
@@ -246,6 +258,6 @@ h2 {
   }
 
   .show {
-    font-size: 2rem;
+    font-size: 3.5rem;
   }
 }
