--- a/style.css
+++ b/style.css
@@ -11,11 +11,13 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow-y: hidden;
   overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
   font-size: 24px;
   color: #273E47;
   background-color: #FFFCF2;
+
 }
 
 h1 {
@@ -75,6 +77,7 @@ h2 {
   grid-template-rows: 1fr;
   text-align: left;
   align-items: center;
+  width: 60%;
   margin: 0 auto;
 }
 
@@ -90,7 +93,7 @@ h2 {
 
 .settingsDiv, #clock-interface {
   max-width: 600px;
-  width: 100vw;
+  width: 60%;
 }
 
 #clockDisplay {
