--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
@@ -11,13 +12,11 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow-y: hidden;
   overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
   font-size: 24px;
   color: #273E47;
   background-color: #FFFCF2;
-
 }
 
 h1 {
@@ -77,7 +76,6 @@ h2 {
   grid-template-rows: 1fr;
   text-align: left;
   align-items: center;
-  width: 60%;
   margin: 0 auto;
 }
 
@@ -93,7 +91,7 @@ h2 {
 
 .settingsDiv, #clock-interface {
   max-width: 600px;
-  width: 60%;
+  width: 100vw;
 }
 
 #clockDisplay {
@@ -182,43 +180,6 @@ h2 {
 .resetRotate {
   animation-name: resetRotate;
   animation-duration: 1s;
-}
-
-@keyframes resetRotate {
-  100% {
-    transform: rotate(720deg);
-  }
-}
-
-.buttonShake {
-  animation-name: shake;
-  animation-duration: 0.4s;
-}
-
-@keyframes shake {
-  0% {transform: translate(1px, 1px) rotate(0deg)}
-  10% {transform: translate(-1px, -2px) rotate(-1deg)}
-  20% {transform: translate(-3px, 0px) rotate(1deg)}
-  30% {transform: translate(3px, 2px) rotate(0deg);}
-  40% {transform: translate(1px, -1px) rotate(1deg)}
-  50% {transform: translate(-1px, 2px) rotate(-1deg)}
-  60% {transform: translate(-3px, 1px) rotate(0deg)}
-  70% {transform: translate(3px, 1px) rotate(-1deg)}
-  80% {transform: translate(-1px, -1px) rotate(1deg)}
-  90% {transform: translate(1px, 2px) rotate(0deg)}
-  100% {transform: translate(1px, -2px) rotate(-1deg)}
-}
-
-.wrenchRotate {
-  transform: rotate(360deg);
-}
-
-.show {
-  font-size: inherit;
-}
-
-.show button {
-  opacity: 1;
 }
 
 @media (max-width: 1000px) {
