--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ h2 {
   grid-template-rows: 1fr;
   text-align: left;
   align-items: center;
+  width: 70%;
   margin: 0 auto;
 }
 
@@ -91,7 +92,7 @@ h2 {
 
 .settingsDiv, #clock-interface {
   max-width: 600px;
-  width: 100vw;
+  width: 60%;
 }
 
 #clockDisplay {
@@ -182,7 +183,44 @@ h2 {
   animation-duration: 1s;
 }
 
-@media (max-width: 1000px) {
+@keyframes resetRotate {
+  100% {
+    transform: rotate(720deg);
+  }
+}
+
+.buttonShake {
+  animation-name: shake;
+  animation-duration: 0.4s;
+}
+
+@keyframes shake {
+  0% {transform: translate(1px, 1px) rotate(0deg)}
+  10% {transform: translate(-1px, -2px) rotate(-1deg)}
+  20% {transform: translate(-3px, 0px) rotate(1deg)}
+  30% {transform: translate(3px, 2px) rotate(0deg);}
+  40% {transform: translate(1px, -1px) rotate(1deg)}
+  50% {transform: translate(-1px, 2px) rotate(-1deg)}
+  60% {transform: translate(-3px, 1px) rotate(0deg)}
+  70% {transform: translate(3px, 1px) rotate(-1deg)}
+  80% {transform: translate(-1px, -1px) rotate(1deg)}
+  90% {transform: translate(1px, 2px) rotate(0deg)}
+  100% {transform: translate(1px, -2px) rotate(-1deg)}
+}
+
+.wrenchRotate {
+  transform: rotate(360deg);
+}
+
+.show {
+  font-size: inherit;
+}
+
+.show button {
+  opacity: 1;
+}
+
+/* @media (max-width: 1000px) {
   h1 {font-size: 4rem;}
 
   #clockDisplay {font-size: 13rem;}
@@ -224,4 +262,4 @@ h2 {
   .show {
     font-size: 3.5rem;
   }
-}
+} */
