--- a/style.css
+++ b/style.css
@@ -227,7 +227,11 @@ h2 {
 
   #clock-interface {
     grid-template-rows: 1fr 0.5fr 1fr;
-    max-width: 900px;
+  }
+
+  .settingsDiv, #clock-interface {
+    max-width: 100vw;
+    width: 90vw;
   }
 
   .roundIndicator {
@@ -235,14 +239,16 @@ h2 {
     height: 40px;
   }
 
-  .roundIndicator:not(:first-child) {margin-left: 50px;}
+  .roundIndicator:not(:first-child) {margin-left: 100px;}
 
-  #settingsButtonContainer {margin-right: 50px;}
+  #settingsButtonContainer {
+
+  }
 
   #settingsButton {font-size: 2.5rem;}
 
   .settingsDiv {
-    max-width: 800px;
+    max-width: 100vw;
     grid-row-gap: 50px;
   }
 
@@ -255,8 +261,9 @@ h2 {
     font-size: 6rem;
   }
 
+
   #sessionSettings, #breakSettings {
-    width: 100vw;
+    width: 60vw;
   }
 
   .show {
