--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ h2 {
   -o-transition: none !important;
 }
 
+.disable-dbl-tap-zoom {
+  touch-action: manipulation;
+}
+
 .interfaceButton {
   font-size: 2.5rem;
   text-align: center;
@@ -239,21 +243,17 @@ h2 {
     height: 40px;
   }
 
-  .roundIndicator:not(:first-child) {margin-left: 100px;}
-
-  #settingsButtonContainer {
-
-  }
+  .roundIndicator:not(:first-child) {margin-left: 80px;}
 
   #settingsButton {font-size: 2.5rem;}
 
   .settingsDiv {
-    max-width: 100vw;
+    width: 100vw;
     grid-row-gap: 50px;
   }
 
   #breakTimeSelector, #sessionTimeSelector {
-    margin: 0 20px;
+    margin: 0 40px;
     width: 6vw;
   }
 
@@ -261,12 +261,15 @@ h2 {
     font-size: 6rem;
   }
 
-
   #sessionSettings, #breakSettings {
     width: 60vw;
   }
 
   .show {
     font-size: 3.5rem;
+  }
+
+  .resetRotate {
+    transform-origin: 60% 15%;
   }
 }
